# historia

./: .gitignore  manage  pyproject.toml  tasks.py
.github/workflows/: ruff.yml
apps/historia_indexing/: pyproject.toml
apps/historia_indexing/historia/indexing/: apps.py  models.py
apps/historia_indexing/historia/indexing/migrations/: 0001_initial.py  0002_vector.py  0003_embedding_index_dimensions_alter_index_name_and_more.py  0004_remove_wikipediadocument_url_document_url.py
deploy/: .env.docker.example  Dockerfile  docker-compose.yml
historia/: manage.py
historia/generation/: apps.py  models.py  urls.py  views.py
historia/generation/migrations/: 0001_initial.py
historia/historia/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
src/historia-ask/: pyproject.toml
src/historia-ask/historia/ask/: __init__.py  __main__.py
src/historia-data/: pyproject.toml
src/historia-data/historia/data/: __init__.py  __main__.py  wikipedia.py
src/historia-data/historia/data/configs/: wikipedia.yaml
src/historia-data/historia/data/configs/wikipedia/: main.yaml  test.yaml
src/historia-data/historia/data/core/: base.py  snipper.py
src/historia-django-utils/: pyproject.toml
src/historia-django-utils/historia/django/: utils.py
src/historia-ml/: pyproject.toml
src/historia-ml/historia/ml/: embedder.py
