[tool.poetry]
name = "historia-ask"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "historia", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
