[tool.poetry]
name = "historia-data"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "historia", from = "." }
]


[tool.poetry.dependencies]
python = "^3.11"

historia-ml = { path = "../historia-ml" }
historia-django-utils = { path = "../historia-django-utils" }
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
