[tool.poetry]
name = "historia-data"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "historia", from = "." }
]


[tool.poetry.dependencies]
python = "^3.11"

historia-indexing = { path = "../../apps/historia_indexing" }

historia-ml = { path = "../historia-ml" }
historia-django-utils = { path = "../historia-django-utils" }

django = "^5.1.3"
pyyaml = "^6.0.2"
wikipedia-api = "^0.7.1"
apache-beam = "^2.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
