[tool.poetry]
name = "historia-django-utils"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "historia", from = "." }
]


[tool.poetry.dependencies]
python = "^3.11"
Django = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
