[tool.poetry]
name = "historia-ml"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [
    { include = "historia", from = "." }
]


[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
